src/test/deca/syntax/valid/class_method_champs.deca
// Description : code d'une classe avec un champ et une methode 
// resultats: code valide syntaxiquement 
class A {
protected int x;
int getX(){
}
int setX(int x){
}
}