src/test/deca/syntax/invalid/test_synt12.deca
//Resultat:
//      Erreur syntaxique : la ligne 4 mauvaise appelation de la classe 
class A {
protected int x;
}
class B() {
A a = new A();
int x = a.x;
}
